--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "cordova-android": "^7.0.0",
     "cordova-custom-config": "^5.0.2",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-actionsheet": "^2.3.3",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-keyboard": "^1.2.0",
+    "cordova-plugin-native-keyboard": "^1.5.3",
     "cordova-plugin-splashscreen": "5.0.1",
     "cordova-plugin-whitelist": "1.3.3",
     "css-loader": "*",
@@ -20,10 +25,22 @@
     "plugins": {
       "cordova-custom-config": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-keyboard": {},
+      "cordova-plugin-native-keyboard": {
+        "LICENSE": "TRIAL"
+      },
+      "cordova-plugin-console": {},
+      "cordova-plugin-actionsheet": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
+  },
+  "scripts": {
+    "android": "monaca transpile; cordova build android;",
+    "ios": "monaca transpile; cordova build ios;",
+    "android-run": "monaca transpile; cordova run android;"
   }
 }
